--- a/H5/H5.html
+++ b/H5/H5.html
@@ -6,20 +6,23 @@
     <title>Ülessanne 5</title>
 </head>
 <body>
-    <H1>Tee nii nagu lause ütleb</H1>
+    <H2>Tee nii nagu lause ütleb</H2>
     <ul>
         <li>See tekst on kaldu</li>
         <li><b>See tekst on rasvaselt</b></li>
         <li><b><i>See tekst on kaldu ja rasvaselt</i></b></li>
-        <li>Siin on kasutatud rea murdumist</li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Siin on kasutatud <br>rea murdumist</li>
+        <li>Siin on viimane sõna <s>mahakriipsutatud</s></li>
+        <li>Pane kirja ringi pindala: S=π*r<sup>2</sup></li>
+        <li>Üks sõna <mark>lauses</mark> on markeeritud</li>
+        <li>Peamurdmist - kuva HTML kood:</li>
     </ul>
-    <table summary="See on meie esimene tähtis tabel">
-        <caption>Monitorid</caption>
-       <p>Portugal vs Island EURO2016</p>
+    <blockquote>&#60;h1>Pealkiri&#60;/h1></blockquote>
+
+    <h2>Tabel ja pildid</H2>
+    <img src="banana.gif" alt="Banana" height="200">
+    <table>
+        <caption>Portugal vs Island EURO2016</caption>
         <thead>
         <tr>
           <th></th>
@@ -29,6 +32,11 @@
         </thead>
        
         <tbody>
+        <tr>
+          <td></td>
+          <td><img src="portugal.png" alt="Portugali lipp" height="75"></td>
+          <td><img src="island.png" alt="Islandi lipp" height="75"></td>
+        </tr> 
         <tr>
           <td>Võidud</td>
           <td>15</td>
