--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
 </head>
 <body>
 	<div class="container">
-        <H1>Kõik HTML, CSS tööd</H1>
-    </div>
+		<h1>HTML5</h1>
+	</div>
     <div class="container">
-        <a href="https://liivakast.hkhk.edu.ee/~kplaas1/HTML5/" class="button">HTML5</a>
-		<a href="https://liivakast.hkhk.edu.ee/~kplaas1/HTMLCSS/" class="button">HTML5+CSS3</a>
-		<a href="https://liivakast.hkhk.edu.ee/~kplaas1/Bootstrap4/" class="button">Bootstrap4</a>
+        <a href="https://liivakast.hkhk.edu.ee/~kplaas1/HTML5/H2.html" class="button">H2.html</a>
+        <a href="https://liivakast.hkhk.edu.ee/~kplaas1/HTML5/H3.html" class="button">H3.html</a>
+        <a href="https://liivakast.hkhk.edu.ee/~kplaas1/HTML5/H4/index.html" class="button">H4.html</a>
+        <a href="https://liivakast.hkhk.edu.ee/~kplaas1/HTML5/H5/index.html" class="button">H5.html</a>
+        <a href="https://liivakast.hkhk.edu.ee/~kplaas1/HTML5/H6.html" class="button">H6.html</a>
     </div>
 </body>
 </html>
