--- a/HTML5-CSS3/H03/index.html
+++ b/HTML5-CSS3/H03/index.html
@@ -23,13 +23,15 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, nam obcaecati accusantium, aut nihil consequatur id dolor iure blanditiis tempore perspiciatis ad, similique voluptate vero sint a optio dolore deleniti! Velit voluptatum doloremque aliquam! Iste doloribus aliquam iure repellat explicabo dignissimos mollitia officiis tenetur aspernatur ipsa quisquam modi at minus rerum commodi aliquid, illo fuga, veritatis expedita praesentium beatae repudiandae officia. Ipsum alias incidunt molestiae minima. Ducimus nulla odit odio earum ullam, expedita illo, vero ad esse maxime ab sunt. Aut consectetur at accusamus asperiores quisquam dolorum! Quisquam placeat quasi, minus, reprehenderit fugiat ratione sit ab dolorum dolorem expedita a.</p>
             <hr>
             <h3>Lisan pildi</h3>
-            <img src="https://picsum.photos/1200/400">
-            <h3>Kasutan täppleondit</h3>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
+            <img src="https://picsum.photos/1200/400" alt="lorem">
+            <h3>Kasutan täpploendit</h3>
+            <ul>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+            </ul>
         </div>
         <footer>
             <p>Keimo</p>
