--- a/HTML5-CSS3/H04/index.html
+++ b/HTML5-CSS3/H04/index.html
@@ -9,8 +9,10 @@
 <body>
     <div class="container">
         <header>
-            <h1>Veebilõust</h1>
-            <h4>Keimo</h4>
+            <div class="heading">
+                <h1>Veebilõust</h1>
+                <h4>Keimo</h4>
+            </div>
             <nav>
                 <a href="#">Avaleht</a>
                 <a href="#">Link 1</a>
@@ -19,7 +21,7 @@
         </header>
         <div class="content">
             <h1>Lorem Ipsum</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus sapiente asperiores quasi rerum aperiam dolorem eaque enim esse tenetur, tempora repellendus. Dolores tempora cupiditate sapiente consequuntur molestiae ex soluta velit harum, perspiciatis porro inventore aperiam eum. Eos itaque enim doloremque iste, veniam odit, voluptatum, quibusdam aut nemo iusto suscipit soluta.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus sapiente asperiores quasi rerum aperiam dolorem eaque enim esse tenetur, tempora repellendus. Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="cards">
             <div class="liha">
