--- a/HTML5-CSS3/CSS_hindeline03/index.html
+++ b/HTML5-CSS3/CSS_hindeline03/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <header>
+            <div id="particles-js"></div>
             <div class="heading">
                 <h1>Veebilõust</h1>
                 <h4>Keimo</h4>
@@ -53,5 +54,7 @@
             <p>Keimo</p>
         </footer>
     </div>
+    <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
+    <script src='https://threejs.org/examples/js/libs/stats.min.js'></script><script  src="./script.js"></script>
 </body>
 </html>
