--- a/HTML5-CSS3/index.html
+++ b/HTML5-CSS3/index.html
@@ -36,8 +36,8 @@
         <H1>HTML5+CSS3</H1>
     </div>
     <div class="container">
-        <a href="https://liivakast.hkhk.edu.ee/~kplaas1/HTMLCSS/CSS_hindeline03" class="button">CSS Hindeline 03</a>
-        <a href="https://liivakast.hkhk.edu.ee/~kplaas1/HTMLCSS/htmlcssnr4" class="button">HTML CSS Nr 4</a>
+        <a href="/HTML5-CSS3/CSS_hindeline03/" class="button">CSS Hindeline 03</a>
+        <a href="/HTML5-CSS3/htmlcssnr4/" class="button">HTML CSS Nr 4</a>
     </div>
 </body>
 </html>
