--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -36,11 +36,11 @@
 		<h1>HTML5</h1>
 	</div>
     <div class="container">
-        <a href="https://liivakast.hkhk.edu.ee/~kplaas1/HTML5/H2.html" class="button">H2.html</a>
-        <a href="https://liivakast.hkhk.edu.ee/~kplaas1/HTML5/H3.html" class="button">H3.html</a>
-        <a href="https://liivakast.hkhk.edu.ee/~kplaas1/HTML5/H4/index.html" class="button">H4.html</a>
-        <a href="https://liivakast.hkhk.edu.ee/~kplaas1/HTML5/H5/index.html" class="button">H5.html</a>
-        <a href="https://liivakast.hkhk.edu.ee/~kplaas1/HTML5/H6.html" class="button">H6.html</a>
+        <a href="/HTML5/H2.html" class="button">H2.html</a>
+        <a href="/HTML5/H3.html" class="button">H3.html</a>
+        <a href="/HTML5/H4/index.html" class="button">H4.html</a>
+        <a href="/HTML5/H5/index.html" class="button">H5.html</a>
+        <a href="/HTML5/H6.html" class="button">H6.html</a>
     </div>
 </body>
 </html>
