--- a/Bootstrap4/H2/index.html
+++ b/Bootstrap4/H2/index.html
@@ -1,31 +1,36 @@
 <!doctype html>
-<html lang="en">
+<html lang="et">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">    <title>H2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <div class="container">
-          <h1 class="display-1">Perenimi.com</h1>
-        <div class="content">          
-          <h1>Pealkiri</h1>
-          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga qui voluptatibus et. Quia sit qui aspernatur eveniet aperiam ipsam consequatur maxime quas, facilis autem ratione a expedita odio beatae laborum.</p>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima ratione numquam quia animi quasi expedita illum sint fugiat, ex, laudantium qui saepe id esse rem odit, sit fugit odio soluta?</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, corrupti ea hic officia amet incidunt, est quam id officiis harum accusamus excepturi aut deserunt nihil placeat debitis fuga quisquam culpa.</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro recusandae, quo minus dicta excepturi esse amet maxime unde quas blanditiis, sequi eligendi itaque, est iure asperiores adipisci omnis cupiditate voluptate.</p>
-          <h2>Alapealkiri</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, vero dolorum assumenda, reprehenderit voluptatibus expedita dicta facere accusantium repellat eum quo eligendi accusamus id natus atque quisquam ad delectus tempore?</p>
+      <h1 class="display-1">Perenimi.com</h1>
+        <div class="row">
+          <div class="col-sm-8">
+            <div class="content">          
+              <h1 class="text-primary">Pealkiri</h1>
+              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga qui voluptatibus et. Quia sit qui aspernatur eveniet aperiam ipsam consequatur maxime quas, facilis autem ratione a expedita odio beatae laborum.</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima ratione numquam quia animi quasi expedita illum sint fugiat, ex, laudantium qui saepe id esse rem odit, sit fugit odio soluta?</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, corrupti ea hic officia amet incidunt, est quam id officiis harum accusamus excepturi aut deserunt nihil placeat debitis fuga quisquam culpa.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro recusandae, quo minus dicta excepturi esse amet maxime unde quas blanditiis, sequi eligendi itaque, est iure asperiores adipisci omnis cupiditate voluptate.</p>
+              <h2>Alapealkiri</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, vero dolorum assumenda, reprehenderit voluptatibus expedita dicta facere accusantium repellat eum quo eligendi accusamus id natus atque quisquam ad delectus tempore?</p>
+            </div>
         </div>
-    </div>
-    <div>
-      <h2>Loend siia</h2>
-      <li>lorem Ipsum</li>
-      <li>lorem Ipsum</li>
-      <li>lorem Ipsum</li>
-      <li>lorem Ipsum</li>
-      <li>lorem Ipsum</li>
+          <div class="col-sm-4">
+            <h2>Loend siia</h2>
+            <ol class="list-group-item">
+              <li class="list-group-item" >lorem Ipsum</li>
+              <li class="list-group-item">lorem Ipsum</li>
+              <li class="list-group-item">lorem Ipsum</li>
+              <li class="list-group-item">lorem Ipsum</li>
+              <li class="list-group-item">lorem Ipsum</li>
+            </ol>
+          </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
