--- a/Bootstrap4/H3/index.html
+++ b/Bootstrap4/H3/index.html
@@ -1,13 +1,43 @@
 <!doctype html>
-<html lang="en">
+<html lang="et">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>H3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <div class="row pt-4">
+        <h1>www.keimohub.live</h1>
+        <img class="img-fluid pb-4" src="https://picsum.photos/1200/400" alt="main" width="1200" height="400">  
+        <div class="col-sm-3" >
+          <div class="div"><img class="rounded-circle img-fluid mx-auto d-block" alt="..." src="https://picsum.photos/200/200"></div>
+        </div>
+        <div class="col-sm-9">
+          <h2>Lorem Ipsum</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem earum architecto molestiae cumque. Dignissimos, ea iure? Laboriosam suscipit non inventore harum optio minima molestias earum cupiditate, a consectetur sequi ex laborum! Ab similique consequuntur corporis assumenda, nostrum iste quos enim obcaecati numquam inventore sapiente fuga sit quam ipsum dignissimos velit incidunt nihil deleniti nam nesciunt ut? Impedit sunt sapiente officia natus maxime error quae, sit ut in? Voluptatibus, debitis asperiores adipisci non sint totam! Aspernatur mollitia id magnam necessitatibus quasi dicta, repellat maxime quis omnis. Amet in alias nesciunt odit doloremque corrupti unde recusandae! Saepe quo dignissimos doloribus quas recusandae?</p>
+        </div>
+      </div>
+      <div class="row pt-4">
+        <div class="col-sm-3" >
+          <div class="div"><img class="rounded-circle img-fluid mx-auto d-block" alt="..." src="https://picsum.photos/200/200"></div>
+        </div>
+        <div class="col-sm-9">
+          <h2>Lorem Ipsum</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem earum architecto molestiae cumque. Dignissimos, ea iure? Laboriosam suscipit non inventore harum optio minima molestias earum cupiditate, a consectetur sequi ex laborum! Ab similique consequuntur corporis assumenda, nostrum iste quos enim obcaecati numquam inventore sapiente fuga sit quam ipsum dignissimos velit incidunt nihil deleniti nam nesciunt ut? Impedit sunt sapiente officia natus maxime error quae, sit ut in? Voluptatibus, debitis asperiores adipisci non sint totam! Aspernatur mollitia id magnam necessitatibus quasi dicta, repellat maxime quis omnis. Amet in alias nesciunt odit doloremque corrupti unde recusandae! Saepe quo dignissimos doloribus quas recusandae?</p>
+        </div>
+      </div>
+      <div class="row pt-4">
+        <div class="col-sm-3" >
+          <div class="div"><img class="rounded-circle img-fluid mx-auto d-block" alt="..." src="https://picsum.photos/200/200"></div>
+        </div>
+        <div class="col-sm-9">
+          <h2>Lorem Ipsum</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem earum architecto molestiae cumque. Dignissimos, ea iure? Laboriosam suscipit non inventore harum optio minima molestias earum cupiditate, a consectetur sequi ex laborum! Ab similique consequuntur corporis assumenda, nostrum iste quos enim obcaecati numquam inventore sapiente fuga sit quam ipsum dignissimos velit incidunt nihil deleniti nam nesciunt ut? Impedit sunt sapiente officia natus maxime error quae, sit ut in? Voluptatibus, debitis asperiores adipisci non sint totam! Aspernatur mollitia id magnam necessitatibus quasi dicta, repellat maxime quis omnis. Amet in alias nesciunt odit doloremque corrupti unde recusandae! Saepe quo dignissimos doloribus quas recusandae?</p>
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
