--- a/Bootstrap4/H4/index.html
+++ b/Bootstrap4/H4/index.html
@@ -4,39 +4,46 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>H4</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <div class="container">
-      <div class="p-5 mb-4 bg-body-tertiary rounded-3">
-        <div class="container-fluid py-5">
-          <h1 class="display-5 fw-bold">Jumbotron</h1>
-          <p class="col-md-8 fs-4">Lorem ipsum dolor sit amet consectetur, adipisicing</p>
+      <div class=" bg-body-tertiary rounded-3 text-white">
+        <div class="text-center container-fluid py-5"
+          class="bg-image d-flex justify-content-center align-items-center"
+          style="background-image: url('background.jpg');
+          height: 25vh;">
+          <h1 class="display-1">Jumbotron</h1>
+          <p class="text-center fs-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
        </div>
       </div>
-      <div class="row align-items-md-stretch">
-        <div class="col-md-6">
-          <div class="h-200 p-5 text-bg-dark rounded-3">
+      <div class="row align-items-md-stretch pt-4">
+        <div class="col align-items-center rounded-1">
+          <img class="img-fluid card-img-top" src="https://picsum.photos/400/400" alt="img">
+          <div class="h-200 p-5">
             <h5>Magna dolore ut</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita illo, sapiente distinctio voluptate harum, exercitationem unde quis quasi obcaecati tempore perferendis blanditiis non. Voluptatum et provident commodi possimus corporis libero ex nostrum, delectus necessitatibus sit reiciendis quis praesentium ullam neque consectetur unde tempora mollitia quia inventore laborum a quae labore!</p>
-            <button class="btn btn-outline-light" type="button">Example button</button>
+            <p>non. Voluptatum et provident commodi possimus corporis libero ex nostrum, delectus necessitatibus sit reiciendis quis praesentium ullam neque consectetur unde tempora mollitia quia inventore laborum a quae labore!</p>
+            <img class="img-fluid fa-2x" src="facebook.png" alt="facebook">
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-            <h5>Sit ame minimi</h5>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta corporis illum repudiandae excepturi molestiae aliquam aut officia accusantium laboriosam numquam culpa voluptatum voluptate dolorum molestias qui ducimus omnis ipsa inventore hic dolores nam, porro sunt. Error dolor, perferendis quas temporibus, optio hic quae fugiat quos autem consequatur, ullam consequuntur! Aliquid!</p>
-            <button class="btn btn-outline-secondary" type="button">Example button</button>
+        <div class="col align-items-center rounded-1">
+          <img class="img-fluid card-img-top" src="https://picsum.photos/400/400" alt="img">
+          <div class="h-200 p-5">
+            <h5>Magna dolore ut</h5>
+            <p>non. Voluptatum et provident commodi possimus corporis libero ex nostrum, delectus necessitatibus sit reiciendis quis praesentium ullam neque consectetur unde tempora mollitia quia inventore laborum a quae labore!</p>
+            <img class="img-fluid fa-2x" src="facebook.png" alt="facebook">
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-            <h5>Nostrud Aliquip ex</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo unde delectus cupiditate illum debitis facere dignissimos, quod in inventore assumenda esse quis similique nulla labore possimus velit laboriosam maiores quaerat. Repudiandae vel reiciendis dicta tempore officia asperiores sapiente. Hic eveniet, repellendus sint ex reiciendis eius dignissimos vitae officiis quibusdam voluptates?</p>
-            <button class="btn btn-outline-secondary" type="button">Example button</button>
+        <div class="col align-items-center rounded-1">
+          <img class="img-fluid card-img-top" src="https://picsum.photos/400/400" alt="img">
+          <div class="h-200 p-5">
+            <h5>Magna dolore ut</h5>
+            <p>non. Voluptatum et provident commodi possimus corporis libero ex nostrum, delectus necessitatibus sit reiciendis quis praesentium ullam neque consectetur unde tempora mollitia quia inventore laborum a quae labore!</p>
           </div>
         </div>
       </div>
+      
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
