--- a/Bootstrap4/H4/index.html
+++ b/Bootstrap4/H4/index.html
@@ -24,7 +24,7 @@
           <div class="h-200 p-5">
             <h5>Magna dolore ut</h5>
             <p>non. Voluptatum et provident commodi possimus corporis libero ex nostrum, delectus necessitatibus sit reiciendis quis praesentium ullam neque consectetur unde tempora mollitia quia inventore laborum a quae labore!</p>
-            <img class="img-fluid fa-2x" src="facebook.png" alt="facebook">
+            <img class="fa-2x" src="facebook.png" alt="facebook">
           </div>
         </div>
         <div class="col align-items-center rounded-1">
