--- a/Bootstrap4/H4/index.html
+++ b/Bootstrap4/H4/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class=" bg-body-tertiary rounded-3 text-white">
-        <div class="text-center container-fluid py-5"
+        <div class="text-center container-fluid py-5 rounded-1"
           class="bg-image d-flex justify-content-center align-items-center"
           style="background-image: url('background.jpg');
           height: 25vh;">
@@ -19,31 +19,49 @@
        </div>
       </div>
       <div class="row align-items-md-stretch pt-4">
-        <div class="col align-items-center rounded-1">
-          <img class="img-fluid card-img-top" src="https://picsum.photos/400/400" alt="img">
-          <div class="h-200 p-5">
-            <h5>Magna dolore ut</h5>
-            <p>non. Voluptatum et provident commodi possimus corporis libero ex nostrum, delectus necessitatibus sit reiciendis quis praesentium ullam neque consectetur unde tempora mollitia quia inventore laborum a quae labore!</p>
-            <img class="fa-2x" src="facebook.png" alt="facebook">
+        <div class="col align-items-center">
+          <div class="h-200 rounded-1 border">
+            <img class="img-fluid card-img-top" src="https://picsum.photos/400/400" alt="img">
+            <div class="p-3">
+              <h5>Magna dolore ut</h5>
+              <span class="badge bg-danger">Lorem</span>
+              <span class="badge bg-secondary">Lorem</span>
+              <p>non. Voluptatum et provident commodi possimus corporis libero ex nostrum, delectus necessitatibus sit reiciendis quis praesentium ullam neque consectetur unde tempora mollitia quia inventore laborum a quae labore!</p>        
+              <img src="https://cdn.freebiesupply.com/logos/large/2x/facebook-logo-black-2019.png" alt="facebook" height="40" width="40">
+              <img src="https://seeklogo.com/images/T/twitter-logo-1DEF94C339-seeklogo.com.png" alt="twitter" height="40" width="40">
+              <img src="https://cdn-icons-png.flaticon.com/512/61/61109.png" alt="Linkedin" height="40" width="40">  
+            </div>
           </div>
         </div>
-        <div class="col align-items-center rounded-1">
-          <img class="img-fluid card-img-top" src="https://picsum.photos/400/400" alt="img">
-          <div class="h-200 p-5">
-            <h5>Magna dolore ut</h5>
-            <p>non. Voluptatum et provident commodi possimus corporis libero ex nostrum, delectus necessitatibus sit reiciendis quis praesentium ullam neque consectetur unde tempora mollitia quia inventore laborum a quae labore!</p>
-            <img class="img-fluid fa-2x" src="facebook.png" alt="facebook">
+        <div class="col align-items-center">
+          <div class="h-200 rounded-1 border">
+            <img class="img-fluid card-img-top" src="https://picsum.photos/400/400" alt="img">
+            <div class="p-3">
+              <h5>Magna dolore ut</h5>
+              <span class="badge bg-danger">Lorem</span>
+              <span class="badge bg-secondary">Lorem</span>
+              <p>non. Voluptatum et provident commodi possimus corporis libero ex nostrum, delectus necessitatibus sit reiciendis quis praesentium ullam neque consectetur unde tempora mollitia quia inventore laborum a quae labore!</p>        
+              <img src="https://cdn.freebiesupply.com/logos/large/2x/facebook-logo-black-2019.png" alt="facebook" height="40" width="40">
+              <img src="https://seeklogo.com/images/T/twitter-logo-1DEF94C339-seeklogo.com.png" alt="twitter" height="40" width="40">
+              <img src="https://cdn-icons-png.flaticon.com/512/61/61109.png" alt="Linkedin" height="40" width="40">  
+            </div>
           </div>
         </div>
-        <div class="col align-items-center rounded-1">
-          <img class="img-fluid card-img-top" src="https://picsum.photos/400/400" alt="img">
-          <div class="h-200 p-5">
-            <h5>Magna dolore ut</h5>
-            <p>non. Voluptatum et provident commodi possimus corporis libero ex nostrum, delectus necessitatibus sit reiciendis quis praesentium ullam neque consectetur unde tempora mollitia quia inventore laborum a quae labore!</p>
+        <div class="col align-items-center">
+          <div class="h-200 rounded-1 border">
+            <iframe class="card-img-top" src="https://www.youtube.com/embed/6r9LmqZYiYs?si=_Cs5pQ2kMGC7Uzw5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="p-3">
+              <h5>Magna dolore ut</h5>
+              <span class="badge bg-danger">Lorem</span>
+              <span class="badge bg-secondary">Lorem</span>
+              <p>non. Voluptatum et provident commodi possimus corporis libero ex nostrum, delectus necessitatibus sit reiciendis quis praesentium ullam neque consectetur unde tempora mollitia quia inventore laborum a quae labore!</p>        
+              <img src="https://cdn.freebiesupply.com/logos/large/2x/facebook-logo-black-2019.png" alt="facebook" height="40" width="40">
+              <img src="https://seeklogo.com/images/T/twitter-logo-1DEF94C339-seeklogo.com.png" alt="twitter" height="40" width="40">
+              <img src="https://cdn-icons-png.flaticon.com/512/61/61109.png" alt="Linkedin" height="40" width="40">  
+            </div>
           </div>
         </div>
       </div>
-      
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
