--- a/Bootstrap4/H5/index.html
+++ b/Bootstrap4/H5/index.html
@@ -1,13 +1,99 @@
 <!doctype html>
-<html lang="en">
+<html lang="et">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>H5</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#"><i class="fas fa-rocket p-2"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-rocket-takeoff-fill" viewBox="0 0 16 16">
+          <path d="M12.17 9.53c2.307-2.592 3.278-4.684 3.641-6.218.21-.887.214-1.58.16-2.065a3.6 3.6 0 0 0-.108-.563 2 2 0 0 0-.078-.23V.453c-.073-.164-.168-.234-.352-.295a2 2 0 0 0-.16-.045 4 4 0 0 0-.57-.093c-.49-.044-1.19-.03-2.08.188-1.536.374-3.618 1.343-6.161 3.604l-2.4.238h-.006a2.55 2.55 0 0 0-1.524.734L.15 7.17a.512.512 0 0 0 .433.868l1.896-.271c.28-.04.592.013.955.132.232.076.437.16.655.248l.203.083c.196.816.66 1.58 1.275 2.195.613.614 1.376 1.08 2.191 1.277l.082.202c.089.218.173.424.249.657.118.363.172.676.132.956l-.271 1.9a.512.512 0 0 0 .867.433l2.382-2.386c.41-.41.668-.949.732-1.526zm.11-3.699c-.797.8-1.93.961-2.528.362-.598-.6-.436-1.733.361-2.532.798-.799 1.93-.96 2.528-.361s.437 1.732-.36 2.531Z"/>
+          <path d="M5.205 10.787a7.6 7.6 0 0 0 1.804 1.352c-1.118 1.007-4.929 2.028-5.054 1.903-.126-.127.737-4.189 1.839-5.18.346.69.837 1.35 1.411 1.925"/>
+        </svg></i>Veebilõust</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#minuMenyy" aria-expanded="false">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    
+      <div class="collapse navbar-collapse" id="minuMenyy">
+        <ul class="navbar-nav mr-sm-2">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Avaleht</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Epood</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Kassa</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Kontakt</a>
+          </li>
+        </ul>
+         <button class="btn btn-success my-2 mx-3 ms-auto" type="submit">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person" viewBox="0 0 20 17">
+            <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
+          </svg>Logi sisse</button>
+        </div>
+      </nav>
+      <div class=" bg-body-tertiary rounded-3 text-white">
+        <div class="text-center container-fluid py-5 rounded-1"
+          class="bg-image d-flex justify-content-center align-items-center"
+          style="background-image: url('background.jpg');
+          height: 25vh;">
+          <h1 class="display-1">Jumbotron</h1>
+          <p class="text-center fs-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+       </div>
+      </div>
+      <div class="row align-items-md-stretch pt-4">
+        <div class="col align-items-center">
+          <div class="h-200 rounded-1 border">
+            <img class="img-fluid card-img-top" src="https://picsum.photos/400/400" alt="img">
+            <div class="p-3">
+              <h5>Magna dolore ut</h5>
+              <span class="badge bg-danger">Lorem</span>
+              <span class="badge bg-secondary">Lorem</span>
+              <p>non. Voluptatum et provident commodi possimus corporis libero ex nostrum, delectus necessitatibus sit reiciendis quis praesentium ullam neque consectetur unde tempora mollitia quia inventore laborum a quae labore!</p>        
+              <img src="https://cdn.freebiesupply.com/logos/large/2x/facebook-logo-black-2019.png" alt="facebook" height="40" width="40">
+              <img src="https://seeklogo.com/images/T/twitter-logo-1DEF94C339-seeklogo.com.png" alt="twitter" height="40" width="40">
+              <img src="https://cdn-icons-png.flaticon.com/512/61/61109.png" alt="Linkedin" height="40" width="40">  
+            </div>
+          </div>
+        </div>
+        <div class="col align-items-center">
+          <div class="h-200 rounded-1 border">
+            <img class="img-fluid card-img-top" src="https://picsum.photos/400/400" alt="img">
+            <div class="p-3">
+              <h5>Magna dolore ut</h5>
+              <span class="badge bg-danger">Lorem</span>
+              <span class="badge bg-secondary">Lorem</span>
+              <p>non. Voluptatum et provident commodi possimus corporis libero ex nostrum, delectus necessitatibus sit reiciendis quis praesentium ullam neque consectetur unde tempora mollitia quia inventore laborum a quae labore!</p>        
+              <img src="https://cdn.freebiesupply.com/logos/large/2x/facebook-logo-black-2019.png" alt="facebook" height="40" width="40">
+              <img src="https://seeklogo.com/images/T/twitter-logo-1DEF94C339-seeklogo.com.png" alt="twitter" height="40" width="40">
+              <img src="https://cdn-icons-png.flaticon.com/512/61/61109.png" alt="Linkedin" height="40" width="40">  
+            </div>
+          </div>
+        </div>
+        <div class="col align-items-center">
+          <div class="h-200 rounded-1 border">
+            <iframe class="card-img-top" src="https://www.youtube.com/embed/6r9LmqZYiYs?si=_Cs5pQ2kMGC7Uzw5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="p-3">
+              <h5>Magna dolore ut</h5>
+              <span class="badge bg-danger">Lorem</span>
+              <span class="badge bg-secondary">Lorem</span>
+              <p>non. Voluptatum et provident commodi possimus corporis libero ex nostrum, delectus necessitatibus sit reiciendis quis praesentium ullam neque consectetur unde tempora mollitia quia inventore laborum a quae labore!</p>        
+              <img src="https://cdn.freebiesupply.com/logos/large/2x/facebook-logo-black-2019.png" alt="facebook" height="40" width="40">
+              <img src="https://seeklogo.com/images/T/twitter-logo-1DEF94C339-seeklogo.com.png" alt="twitter" height="40" width="40">
+              <img src="https://cdn-icons-png.flaticon.com/512/61/61109.png" alt="Linkedin" height="40" width="40">  
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
