--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
 	<div class="container">
+        <img src="https://i.pinimg.com/originals/8a/8b/df/8a8bdf32c838096c7d9ecacafb4b82c8.gif" height="150" alt="gif">
 		<h1>HTML5</h1>
 	</div>
     <div class="container">
-        <a href="/HTML5/H2.html" class="button">H2.html</a>
-        <a href="/HTML5/H3.html" class="button">H3.html</a>
-        <a href="/HTML5/H4/index.html" class="button">H4.html</a>
-        <a href="/HTML5/H5/index.html" class="button">H5.html</a>
-        <a href="/HTML5/H6.html" class="button">H6.html</a>
+        <a href="HTML5/H2.html" class="button">H2</a>
+        <a href="HTML5/H3.html" class="button">H3</a>
+        <a href="HTML5/H4/index.html" class="button">H4</a>
+        <a href="HTML5/H5/index.html" class="button">H5</a>
+        <a href="HTML5/H6.html" class="button">H6</a>
+        <a href="HTML5/töö" class="button">töö</a>
     </div>
 </body>
 </html>
