--- a/Bootstrap4/H8/index.html
+++ b/Bootstrap4/H8/index.html
@@ -3,11 +3,78 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>H8</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <h3>Registreerimine</h3>
+        <form class="needs-validation" novalidate>
+          <div class="form-row">
+            <div class="col-md-4 mb-3">
+              <div>
+                <label for="valid1">Eesnimi</label>
+                <input type="text" class="form-control" id="valid1" placeholder="Eesnimi" required>
+                <div class="valid-feedback">Korras</div>
+                <div class="invalid-feedback">Palun täida!</div>
+              </div>
+            </div>
+              <div class="col-md-4 mb-3">
+                <div>
+                  <label for="valid2">Perenimi</label>
+                  <input type="text" class="form-control" id="valid2" placeholder="Perenimi" required>
+                  <div class="valid-feedback">Korras</div>
+                  <div class="invalid-feedback">Palun täida!</div>
+                </div>
+              </div>
+          </div>
+          <div class="form-row">
+            <div class="col-md-4 mb-3">
+              <div>
+                <label for="valid1">Email</label>
+                <input type="text" class="form-control" id="valid1" placeholder="Email" required>
+                <div class="valid-feedback">Korras</div>
+                <div class="invalid-feedback">Palun täida!</div>
+              </div>
+            </div>
+              <div class="col-md-4 mb-3">
+                <div>
+                  <label for="valid2">Perenimi</label>
+                  <input type="text" class="form-control" id="valid2" placeholder="Telefon" required>
+                  <div class="valid-feedback">Korras</div>
+                  <div class="invalid-feedback">Palun täida!</div>
+                </div>
+              </div>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="gridCheck1">
+            <label class="form-check-label" for="gridCheck1">
+              Example checkbox
+            </label>
+          </div>
+          <input class="btn btn-primary" type="submit" value="Registreeru">
+        </form>
+      </div>
+    </div>
+  </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+      (function() {
+        'use strict';
+        window.addEventListener('load', function() {
+          var forms = document.getElementsByClassName('needs-validation');
+          var validation = Array.prototype.filter.call(forms, function(form) {
+            form.addEventListener('submit', function(event) {
+              if (form.checkValidity() === false) {
+                event.preventDefault();
+                event.stopPropagation();
+              }
+              form.classList.add('was-validated');
+            }, false);
+          });
+        }, false);
+      })();
+    </script>
   </body>
 </html>
